# ppapp

./: Cargo.toml  build.rs
client/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.jsx  App.tsx  index.css  socket.ts  voting.ts
client/src/components/: InlineUser.tsx  Login.tsx  MsgSubmitBox.jsx  RoomForm.tsx  RoomMsgsList.jsx  RoundsList.tsx  ToastsContainer.tsx  UserForm.tsx  UsersList.tsx  VoteArea.tsx  Votes.tsx
client/src/components/voting/: PercentVoteArea.tsx  PickOneVoteArea.tsx
client/src/games/: RetroGame.tsx
client/src/types/: games.ts  index.ts  ppapi.ts  ppapi_old.ts  toasts.ts
client/src/types/ppapi/: AckResult.ts  CurrentRoundDTO.ts  Game.ts  MessageDTO.ts  RoomDTO.ts  RoundDTO.ts  RoundOpts.ts  UserDTO.ts  VoteDTO.ts  index.ts
src/: dto.rs  event.rs  handlers.rs  id.rs  main.rs  meta.rs  pokemon.rs  state.rs
src/handlers/: rooms.rs  rounds.rs  users.rs  votes.rs
src/state/: export.rs  game.rs  message.rs  room.rs  round.rs  user.rs  vote.rs
