[package]
name = "ppapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tower = "0.4"
tower-http = { version = "0.5.1", features = ["cors"] }
serde = "1.0"
serde_json = { version = "1.0", features = [] }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
socketioxide = { version = "0.10.1", features = ["state"] }
chrono = { version = "0.4", features = ["serde"] }
uneval = "0.2.4"
git-version = "0.3.9"
semver = "1.0.21"

[build-dependencies]
serde_json = "*"
uneval = "*"