[package]
name = "ppapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tower = "0.4"
tower-http = { version = "0.5.1", features = ["cors"] }
serde = "1.0"
serde_json = { version = "1.0", features = [] }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socketioxide = { version = "0.10.1", features = ["state", "extensions", "tracing"] }
chrono = { version = "0.4", features = ["serde"] }
git-version = "0.3.9"
semver = "1.0.21"
lazy_static = "1.4.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
base64 = { version = "0.21.7" }
rand = "0.8.5"
anyhow = "1.0.79"
sha2 = "0.11.0-pre.2"
base16ct = { version = "0.2.0", features = ["alloc"] }
ts-rs = "7.1"
tracing-tree = "0.3.0"
thiserror = "1.0.57"